# Zenith2D

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE.md  README.md
.github/workflows/: ci.yml
Engine/: CMakeLists.txt
Engine/include/Engine/: Color.h  EllipseShape.h  Engine.h  Event.h  FileIo.h  Geometry.h  Geometry.inl  Helpers.h  Input.h  Key.h  Logger.h  LoggingOptions.h  PrimitiveRenderer.h  Window.h
Engine/include/Engine/Debug/: Timer.h
Engine/src/: Color.cpp  EllipseShape.cpp  Engine.cpp  Event.cpp  FileIo.cpp  Helpers.cpp  Input.cpp  Key.cpp  Logger.cpp  PrimitiveRenderer.cpp  Window.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: Application.cpp  Application.h  Application.hpp  Dragon.cpp  Dragon.hpp  Level1.cpp  Level1.hpp  Level2.cpp  Level2.hpp  Player.cpp  Player.hpp  Sandbox.cpp  Sandbox.hpp  Scene.cpp  Scene.hpp  main.cpp
Testbed/: CMakeLists.txt
Testbed/src/: Application.cpp  Application.hpp  EventTest.cpp  EventTest.hpp  PrimitiveRendererTest.cpp  PrimitiveRendererTest.hpp  Testbed.cpp  Testbed.hpp  main.cpp
Zenith/: .clang-format  CMakeLists.txt
Zenith/include/Zenith/: Application.h  Application.hpp  Color.h  Color.hpp  Common.hpp  CustomPrimitiveRenderer.hpp  CustomRenderer.hpp  DrawCall.hpp  EllipseShape.h  EllipseShape.hpp  Engine.h  Event.h  Event.hpp  Geometry.h  Geometry.hpp  Geometry.inl  Input.h  Input.hpp  Logger.h  Logger.hpp  LoggingOptions.h  LoggingOptions.hpp  PrimitiveRenderer.h  PrimitiveRenderer.hpp  SfmlPrimitiveRenderer.hpp  SfmlRenderer.hpp  Texture.hpp  Timer.h  Timer.hpp  Typedefs.h  Utility.hpp  Window.h  Window.hpp  Zenith.hpp
Zenith/include/Zenith/Core/: Application.hpp  Core.hpp  Engine.hpp  EventDispatcher.hpp  EventListener.hpp  FrameCounter.hpp  Scene.hpp  Transformable.hpp  Updatable.hpp  UpdateDispatcher.hpp  Updater.hpp
Zenith/include/Zenith/Filesystem/: FileIo.hpp  Filesystem.hpp
Zenith/include/Zenith/Graphics/: Animatable.hpp  Color.hpp  CustomPrimitiveRenderer.hpp  DrawCall.hpp  Drawable.hpp  EllipseShape.hpp  Graphics.hpp  OpenGlContextSettings.hpp  PrimitiveRenderer.hpp  Renderer.hpp  SfmlEllipseShape.hpp  SfmlPrimitiveRenderer.hpp  Shader.hpp  Shaders.hpp  Sprite.hpp  Texture.hpp  Vertex.hpp  VertexArray.hpp
Zenith/include/Zenith/Graphics/Shapes/: CircleShape.hpp  EllipseShape.hpp  RectangleShape.hpp  Shape.hpp  Shapes.hpp  TriangleShape.hpp
Zenith/include/Zenith/Logging/: Logger.hpp  Logger.inl
Zenith/include/Zenith/Math/: Functions.hpp  Geometry.hpp  Geometry.inl  Math.hpp  Vec2.hpp  Vec2.inl  Vec3.hpp  Vec3.inl
Zenith/include/Zenith/Platform/: Event.hpp  Input.hpp  Platform.hpp  Resolution.hpp  Window.hpp
Zenith/include/Zenith/Platform/Input/: Input.hpp  Keyboard.hpp  Mouse.hpp
Zenith/include/Zenith/Sound/: AudioPlayer.hpp  Sound.hpp
Zenith/include/Zenith/Time/: Timer.hpp
Zenith/include/Zenith/Utility/: EnumFlags.hpp  GlobalAccessPtr.hpp  Utility.hpp
Zenith/src/: Application.cpp  CustomPrimitiveRenderer.cpp  CustomRenderer.cpp  EllipseShape.cpp  Engine.cpp  Event.cpp  FileIo.cpp  Input.cpp  Logger.cpp  PrimitiveRenderer.cpp  SfmlPrimitiveRenderer.cpp  SfmlRenderer.cpp  Texture.cpp  Window.cpp  pch.hpp
Zenith/src/Core/: Application.cpp  Engine.cpp  EventDispatcher.cpp  Scene.cpp  UpdateDispatcher.cpp  Updater.cpp  main.cpp
Zenith/src/Filesystem/: FileIo.cpp
Zenith/src/Graphics/: CustomPrimitiveRenderer.cpp  EllipseShape.cpp  PrimitiveRenderer.cpp  Renderer.cpp  SfmlEllipseShape.cpp  SfmlPrimitiveRenderer.cpp  Shader.cpp  Shaders.cpp  Sprite.cpp  Texture.cpp  VertexArray.cpp
Zenith/src/Graphics/Shapes/: CircleShape.cpp  EllipseShape.cpp  RectangleShape.cpp  TriangleShape.cpp
Zenith/src/Logging/: Logger.cpp
Zenith/src/Math/: Geometry.cpp
Zenith/src/Platform/: Event.cpp  Input.cpp  Window.cpp
Zenith/src/Platform/Input/: Input.cpp  Keyboard.cpp  Mouse.cpp
Zenith/src/Shaders/: basic.vert
cmake/: warnings.cmake
